Jun 19, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- use separate types for ET and RTCW so update from master doesn't throw away
  all servers. Today's qstat cvs version required.
- add gametypes for World of Padman Q3A mod

Jun 06, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- update Danish translation (Morten Brix Pedersen)

Jun 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for Americas Army 2.1. Still no master, old version no longer
  supported, requires recent qstat from cvs (gs2 protocol)

May 29, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add AlienSwarm custom arguments for UT2004, also specify separate log file
  for each mod (patch by Andreas Schneider)

May 24, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add Troopers custom arguments for UT2004 (patch by Andreas Schneider)

May 23, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- enable custom args for all games
- add RedOrchestra custom arguments for UT2004

May 16, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- replace no longer working Tribes2 master server addresses with
  current ones (#954570)

May 09, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- create LaunchInfo.txt by default
- when suggesting a command, don't add full path (since it will be found in
  $PATH anyway)
- clean up resolve_path. Let it do path and tilde expansion and don't suggest
  directories in $PATH.
- fix some minor memory leaks
- export the variables XQF_SERVER_NAME, XQF_SERVER_MAP, XQF_SERVER_HOSTNAME and
  XQF_SERVER_GAME when launching a game (suggested by Ruediger Meier)
- don't inherit some tags from base game, e.g. suggested commands
- use steam1.steampowered.com and steam2.steampowered.com as steam master

May 08, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- support for Half-Life steam master. Nasty hack, hopefully doesn't break other stuff.
- set anti-cheat flag for VAC (secure != 0)
- increase version to 0.9.14.1