@@ -69,6 +69,7 @@ of Honor</a></li>
           <li><a href="#mozTocId755086">Call
 of Duty</a></li>
           <li><a href="#mozTocId941470">Savage</a></li>
+          <li><a href="#mozTocId290185">Jedi Knight: Jedi Academy</a></li>
         </ol>
       </li>
     </ol>
@@ -152,6 +153,7 @@ Serious Sam: The Second Encounter<br>
 Medal of Honor: Allied Assault<br>
 Call of Duty (wine)<br>
 Savage<br>
+Jedi Knight: Jedi Academy (wine)<br>
 </blockquote>
 <p>Searching for games involves communicating with 'master servers' on
 the Internet which game servers advertise to on the Internet.&nbsp;
@@ -218,8 +220,11 @@ Log&nbsp;<br>
  style="font-weight: bold; text-decoration: underline;">XQF 0.9.14 --
 March 21, 2004</span><br>
   <ul>
-    <li>New games: UT2004, Postal2, BF1942(wine). All without official master.</li>
-    <li>Improved --launch parameter, now only requires IP address and asks for type if needed. It's possible now to use this together with e.g. XChat.</li>
+    <li>New games: UT2004, Postal2, BF1942(wine). All without official
+master.</li>
+    <li>Improved --launch parameter, now only requires IP address and
+asks for type if needed. It's possible now to use this together with
+e.g. XChat.</li>
     <li>Add --add parameter to just add a server to favorites</li>
     <li>Fix LAN browsing</li>
     <li>Add LAN masters by default</li>
@@ -229,7 +234,8 @@ March 21, 2004</span><br>
     <li>Switch to intltool for i18n</li>
     <li>Install desktop files</li>
   </ul>
-  <span style="font-weight: bold; text-decoration: underline;">XQF 0.9.13 --
+  <span style="font-weight: bold; text-decoration: underline;">XQF
+0.9.13 --
 November 24, 2003</span><br>
   <ul>
     <li>New games: America's Army, Savage, Medal of Honor, Call of
@@ -253,7 +259,6 @@ launching a game when the server requires some anti-cheat software.</li>
     <li>Experimental GTK2 compilation support</li>
     <li>New French translation</li>
   </ul>
-
   <u><b>XQF 0.9.12 -- June 10, 2003</b></u>
   <ul style="list-style-type: disc;">
     <li>Added Enemy Territory Support support</li>
@@ -838,8 +843,8 @@ the following games:<br>
         <li>Return to Castle Wolfenstein</li>
         <li>Enemy Territory</li>
         <li>Medal of Honor</li>
-        <li>Call of Duty<br>
-        </li>
+        <li>Call of Duty</li>
+        <li>Jedi Knight: Jedi Academy</li>
         <li>Half-Life</li>
         <li>Unreal Tournament</li>
         <li>Unreal Tournament 2003</li>
@@ -1701,11 +1706,11 @@ file is required. XQF since version 0.9.13 installs a working one for
 you.<br>
     <br>
   </blockquote>
-  <h3><a class="mozTocH3" name="mozTocId755086"></a><a name="MOHAA"></a>Call
+  <h3><a class="mozTocH3" name="mozTocId755086"></a><a name="COD"></a>Call
 of Duty</h3>
   <blockquote> There is currently no native client for Call of Duty,
 you need wine to run it. You can find an installer at <a
- href="http://www.kratz00.org/linux/installer.php?what=cod">http://www.kratz00.org/linux/installer.php?what=cod</a><br>
+ href="http://liflg.sourceforge.net/?page=art&amp;artid=16">http://liflg.sourceforge.net/?page=art&amp;artid=16</a><br>
     <br>
   </blockquote>
   <h3><a class="mozTocH3" name="mozTocId941470"></a><a name="savage"></a>Savage</h3>
@@ -1720,6 +1725,14 @@ to<br>
 You also need a special qstat version with Savage support. You can
 download it from <a href="ftp://ftp.multiplay.co.uk/pub/apps/qstat/">ftp://ftp.multiplay.co.uk/pub/apps/qstat/</a><br>
   </blockquote>
+</blockquote>
+<h3><a class="mozTocH3" name="mozTocId290185"></a><a name="JK3"></a>Jedi
+Knight: Jedi Academy</h3>
+<blockquote> There is currently no native client for Jedi Knight: Jedi
+Academy,
+you need wine to run it. You can find an installer at <a
+ href="http://liflg.sourceforge.net/?page=art&amp;artid=18">http://liflg.sourceforge.net/?page=art&amp;artid=18</a><br>
+  <br>
 </blockquote>
 <h1><a class="mozTocH1" name="mozTocId154111"></a>&nbsp;<a
  name="Troubleshooting"></a>Troubleshooting
