@@ -262,6 +262,9 @@ static GtkWidget *ef_setfs_gamebutton;
 /* Call of Duty */
 static GtkWidget *cod_proto_entry;
 
+/* Jedi Academy */
+static GtkWidget *jk3_proto_entry;
+
 /* Soldier of Fortune 2 */
 static GtkWidget *sof2_proto_entry;
 
@@ -320,6 +323,12 @@ char* ef_masterprotocols[] = {
 
 char* cod_masterprotocols[] = {
 	"1",
+	NULL
+};
+
+char* jk3_masterprotocols[] = {
+	"25 - v1.0",
+	"26 - v1.01",
 	NULL
 };
 
@@ -798,6 +807,21 @@ static void get_new_defaults (void) {
 
   config_pop_prefix ();
 
+/* Jedi Academy */
+
+  config_push_prefix ("/" CONFIG_FILE "/Game: JK3S");
+
+  str = strdup_strip (gtk_entry_get_text (GTK_ENTRY (GTK_COMBO (jk3_proto_entry)->entry)));
+  // locate first space and mark it as str's end
+  str1 = strchr(str,' ');
+  if (str1) *str1='\0';
+
+  game_set_attribute(JK3_SERVER,"masterprotocol",strdup_strip(str));
+  config_set_string ("protocol", (str)? str : "");
+  g_free(str);
+  str=NULL;
+
+  config_pop_prefix ();
 
   /* Tribes 2 */
 
@@ -3163,7 +3187,43 @@ static GtkWidget *cod_options_page (void) {
   return page_vbox;
 }
 
-// additional options for call of duty
+// additional options for jedi academy
+static GtkWidget *jk3_options_page (void) {
+  GtkWidget *page_vbox;
+  GtkWidget *hbox;
+  GtkWidget *label;
+
+  page_vbox = gtk_vbox_new (FALSE, 4);
+  gtk_container_set_border_width (GTK_CONTAINER (page_vbox), 8);
+
+	hbox = gtk_hbox_new (FALSE, 8);
+	gtk_box_pack_start (GTK_BOX (page_vbox), hbox, FALSE, FALSE, 0);
+
+	  label = gtk_label_new (_("Masterserver Protocol Version"));
+	  gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 0);
+	  gtk_widget_show (label);
+
+	  jk3_proto_entry = gtk_combo_new ();
+	  gtk_combo_set_use_arrows_always (GTK_COMBO (jk3_proto_entry), TRUE);
+	  gtk_combo_set_popdown_strings(GTK_COMBO (jk3_proto_entry),
+			  createGListfromchar(jk3_masterprotocols));
+	  gtk_list_set_selection_mode (GTK_LIST (GTK_COMBO (jk3_proto_entry)->list),
+			  GTK_SELECTION_BROWSE);
+	  
+	  gtk_entry_set_text (GTK_ENTRY (GTK_COMBO (jk3_proto_entry)->entry),
+		game_get_attribute(JK3_SERVER,"masterprotocol"));
+
+	  gtk_box_pack_start (GTK_BOX (hbox), jk3_proto_entry, FALSE, FALSE, 0);
+	  gtk_widget_show (jk3_proto_entry);
+
+	gtk_widget_show (hbox);
+
+  gtk_widget_show (page_vbox);
+
+  return page_vbox;
+}
+
+// additional options for soldier of fortune2
 static GtkWidget *sof2_options_page (void) {
   GtkWidget *page_vbox;
   GtkWidget *hbox;
@@ -3268,6 +3328,11 @@ void add_woet_options_to_notebook(GtkWidget *notebook)
 void add_cod_options_to_notebook(GtkWidget *notebook)
 {
   gtk_notebook_append_page (GTK_NOTEBOOK (notebook), cod_options_page(), gtk_label_new (_("Options")));
+}
+
+void add_jk3_options_to_notebook(GtkWidget *notebook)
+{
+  gtk_notebook_append_page (GTK_NOTEBOOK (notebook), jk3_options_page(), gtk_label_new (_("Options")));
 }
 
 void add_sof2_options_to_notebook(GtkWidget *notebook)
@@ -4448,6 +4513,7 @@ static struct generic_prefs* new_generic_prefs (void) {
   new_genprefs[WO_SERVER].add_options_to_notebook = add_wolf_options_to_notebook;
   new_genprefs[WOET_SERVER].add_options_to_notebook = add_woet_options_to_notebook;
   new_genprefs[COD_SERVER].add_options_to_notebook = add_cod_options_to_notebook;
+  new_genprefs[JK3_SERVER].add_options_to_notebook = add_jk3_options_to_notebook;
   new_genprefs[SOF2S_SERVER].add_options_to_notebook = add_sof2_options_to_notebook;
   new_genprefs[T2_SERVER].add_options_to_notebook = add_t2_options_to_notebook;
   new_genprefs[EF_SERVER].add_options_to_notebook = add_ef_options_to_notebook;
@@ -4892,6 +4958,20 @@ int prefs_load (void) {
   }
 
   game_set_attribute(COD_SERVER,"masterprotocol",tmp);
+
+  config_pop_prefix ();
+  
+    /* Jedi Academy */
+  config_push_prefix ("/" CONFIG_FILE "/Game: JK3S");
+  
+  tmp = config_get_string ("protocol=26");
+  if ( strlen( tmp ) == 0 )
+  {
+    g_free(tmp);
+    tmp = NULL;
+  }
+
+  game_set_attribute(JK3_SERVER,"masterprotocol",tmp);
 
   config_pop_prefix ();
 
