@@ -1,0 +1,36 @@
+/* XPM */
+static char * jk3_xpm[] = {
+"16 16 17 1",
+" 	c None",
+".	c #0A0503",
+"+	c #0F1A32",
+"@	c #032970",
+"#	c #51121C",
+"$	c #881229",
+"%	c #B40310",
+"&	c #612851",
+"*	c #1D51A6",
+"=	c #DF1B2E",
+"-	c #5877F1",
+";	c #E54B70",
+">	c #AE7385",
+",	c #5C90E8",
+"'	c #8393B7",
+")	c #AF83C0",
+"!	c #9AC7F9",
+"....@-@..@-@....",
+"..+@@-*++@-@....",
+".+@@*--@@@-@....",
+"+@@@-,*@@--@++..",
+"@@@**!,-*-,-@@+.",
+"@*-,!,!,,,,-*@@+",
+",,!!!*!!!!!,-*@@",
+"**-,!!!!!!!,-,*@",
+"+*'-,!!!!!!!!,,*",
+"++**,!,!!,,!!,,*",
+".++&)))-))!>'&*@",
+"..#=>>>))>>>>;#+",
+"..#=$;;'>;';$=#.",
+".#%=$=;#;;&=$%#.",
+".$%%%%$%=%%$%%$.",
+"..#.#######..#.."};
